# Plshireme.eu

./: .gitignore  01_SuppResPromptToPlotGroqLangchain.ipynb  02_CongConsPromptToPlotGroqLangchain.ipynb  BTC-USD.csv  Makefile  Modelfile  PromptsCoT.ipynb  PromptsCoTOutputPlotInfo.ipynb  SignedUpwGoogle.txt  StructuredDataAsContext100Candles.ipynb  StructuredDataToLLMCoT.ipynb  TEST_02_CongConsPromptToPlotGroqLangchain.ipynb  TechnicalIndicatorsTest.ipynb  btcusdlast100.csv  prevbtcusdlast100.csv  prompts.py  suppres.csv
MicroServices/: RedPanda.yml
MicroServices/FeaturePipeline/DockerComposeBundles/: FeaturePipeline.yml
MicroServices/FeaturePipeline/KafkaToFeatureStore/: .dockerignore  KafkaToFS.Dockerfile  LiteKafkaToFS.Dockerfile  pyproject.toml  sample.env
MicroServices/FeaturePipeline/OHLCTradeAggregator/: .dockerignore  TradeAggregator.Dockerfile  pyproject.toml  sample.env
MicroServices/FeaturePipeline/TradeProducer/: .dockerignore  TradeProducer.Dockerfile  pyproject.toml  sample.env
MicroServices/OHLCTradeAggregator/: .dockerignore  LiteAggregator.Dockerfile
MicroServices/OHLCTradeAggregator/source/: AggregatorQuixStreamsApp.py  Config.py
MicroServices/RedPandaKafkaBroker/: RedPanda.yml
MicroServices/TradeProducer/: .dockerignore  LiteProducer.Dockerfile  TradeProducer.Dockerfile  TradeProducer.yml  pyproject.toml  sample.env
MicroServices/TradeProducer/source/: Config.py  FetchTrades.py  ProducerQuixStreamsApp.py
tests/: RAG_1.ipynb  RAG_2.ipynb  StructuredDataAsContext.ipynb  bokehtests.ipynb  ollamatest.ipynb
(+16 files in other folders)
